2011-06-07  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix the error code for media resource failures when using QtMobility
        https://bugs.webkit.org/show_bug.cgi?id=55901

        Unskip the tests which are now passing.

        * platform/qt/Skipped:
2011-06-07  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix the error code for media resource failures when using QtMobility
        https://bugs.webkit.org/show_bug.cgi?id=55901

        To indicate the media resource failures, set the network state to
        MediaPlayer::FormatError when receives QMediaPlayer::InvalidMedia or
        QMediaPlayer::ResourceError.

        * platform/graphics/qt/MediaPlayerPrivateQt.cpp:
        (WebCore::MediaPlayerPrivateQt::updateStates):

Canonical link: https://commits.webkit.org/77740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88318 268f45cc-cd09-0410-ab3c-d52691b4dbfc